[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemies/sprite_turret_enemy0.png" type="Texture" id=1]
[ext_resource path="res://enemies/TurretEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/sprite_turret_enemy4.png" type="Texture" id=3]
[ext_resource path="res://physics/SoftCollision.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0416

[node name="TurretEnemy" type="Area2D" groups=["enemies"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 1 )
offset = Vector2( -2, 0 )

[node name="GunSprite" type="Sprite" parent="."]
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 3 )
offset = Vector2( -2, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -13, -17, 12, -17, 17, -12, 17, 12, 12, 17, -13, 17, -18, 12, -18, -12 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 1 )

[node name="Gun1" type="Position2D" parent="."]
position = Vector2( 7, -1 )

[node name="Gun2" type="Position2D" parent="."]
position = Vector2( -7, -1 )

[connection signal="area_entered" from="." to="." method="_on_TurretEnemy_area_entered"]

[editable path="SoftCollision"]
